force-app/main/default/objects/RR_Assignment_Rule__c/RR_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <description>added for GTMS-10121</description>
    <label>RR Assignment Rule</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Rule Id (Name)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RR Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>