force-app/main/default/objects/RR_Assignment_Rule__c/fields/Account_Hashtag__c.field-meta.xml
<CustomField>
    <fullName>Account_Hashtag__c</fullName>
    <label>Account Hashtag</label>
    <type>TextArea</type>
</CustomField>