force-app/main/default/objects/RR_Assignment_Rule__c/fields/Account_Lifetime_ACV__c.field-meta.xml
<CustomField>
    <fullName>Account_Lifetime_ACV__c</fullName>
    <label>Account Lifetime ACV</label>
    <length>25</length>
    <type>Text</type>
</CustomField>