force-app/main/default/objects/RR_Assignment_Rule__c/fields/Account_Size_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Size_Segment__c</fullName>
    <label>Account Size Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>AE2/AE3</fullName>
            </value>
            <value>
                <fullName>AE1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>