force-app/main/default/objects/RR_Assignment_Rule__c/fields/Always_Use_Next_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Always_Use_Next_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Use Next Assignment</label>
    <type>Checkbox</type>
</CustomField>