force-app/main/default/objects/RR_Assignment_Rule__c/fields/Assign_CSM__c.field-meta.xml
<CustomField>
    <fullName>Assign_CSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign CSM</label>
    <type>Checkbox</type>
</CustomField>