force-app/main/default/objects/RR_Assignment_Rule__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Billing Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Country</valueSetName>
    </valueSet>
</CustomField>