force-app/main/default/objects/RR_Assignment_Rule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automating Pipeline</fullName>
            </value>
            <value>
                <fullName>Lane Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>