force-app/main/default/objects/RR_Assignment_Rule__c/fields/CS_Tier__c.field-meta.xml
<CustomField>
    <fullName>CS_Tier__c</fullName>
    <label>CS Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Core Basic</fullName>
            </value>
            <value>
                <fullName>Select Basic</fullName>
            </value>
            <value>
                <fullName>Strategic Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>