force-app/main/default/objects/RR_Assignment_Rule__c/fields/CSM_Null_Check__c.field-meta.xml
<CustomField>
    <fullName>CSM_Null_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSM Null Check</label>
    <type>Checkbox</type>
</CustomField>