force-app/main/default/objects/RR_Assignment_Rule__c/fields/Customer_ARR__c.field-meta.xml
<CustomField>
    <fullName>Customer_ARR__c</fullName>
    <label>Customer ARR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>