force-app/main/default/objects/RR_Assignment_Rule__c/fields/Deal_Reg_Account__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Reg Account</label>
    <type>Checkbox</type>
</CustomField>