force-app/main/default/objects/RR_Assignment_Rule__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <label>Domain Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.gov</fullName>
            </value>
            <value>
                <fullName>.edu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>