force-app/main/default/objects/RR_Assignment_Rule__c/fields/Experimental_Group_Routing__c.field-meta.xml
<CustomField>
    <fullName>Experimental_Group_Routing__c</fullName>
    <label>Experimental Group Routing</label>
    <type>TextArea</type>
</CustomField>