force-app/main/default/objects/RR_Assignment_Rule__c/fields/Field_To_Assign_User__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Assign_User__c</fullName>
    <label>Field To Assign User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OwnerId</fullName>
            </value>
            <value>
                <fullName>CSM__c</fullName>
            </value>
            <value>
                <fullName>Renewal_AE__c</fullName>
            </value>
            <value>
                <fullName>Manufacturing_AE__c</fullName>
            </value>
            <value>
                <fullName>SIC__c</fullName>
            </value>
            <value>
                <fullName>Sites_Specialist__c</fullName>
            </value>
            <value>
                <fullName>Support_Escalation_Owner__c</fullName>
            </value>
            <value>
                <fullName>Remote_Infrastructure_AE__c</fullName>
            </value>
            <value>
                <fullName>Pre_Sale_IC__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>