force-app/main/default/objects/RR_Assignment_Rule__c/fields/Inside_Sales_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Assignment__c</fullName>
    <label>Inside Sales Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IS Pool</fullName>
            </value>
            <value>
                <fullName>Justin Messer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>