force-app/main/default/objects/RR_Assignment_Rule__c/fields/Is_Owner_Pool_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Pool_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for Lane Four conversion POC</description>
    <label>Is Owner Pool User</label>
    <type>Checkbox</type>
</CustomField>