force-app/main/default/objects/RR_Assignment_Rule__c/fields/Most_Recent_Source__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Source__c</fullName>
    <label>Most Recent Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>deal reg form</fullName>
            </value>
            <value>
                <fullName>outbound call / email / linkedin</fullName>
            </value>
            <value>
                <fullName>partner referral</fullName>
            </value>
            <value>
                <fullName>partner application form</fullName>
            </value>
            <value>
                <fullName>partner business registration</fullName>
            </value>
            <value>
                <fullName>sites inbound form</fullName>
            </value>
            <value>
                <fullName>customer referral</fullName>
            </value>
            <value>
                <fullName>referral</fullName>
            </value>
            <value>
                <fullName>marketing email</fullName>
            </value>
            <value>
                <fullName>webinar registration form</fullName>
            </value>
            <value>
                <fullName>website visitor</fullName>
            </value>
            <value>
                <fullName>technology advice</fullName>
            </value>
            <value>
                <fullName>events</fullName>
            </value>
            <value>
                <fullName>website form</fullName>
            </value>
            <value>
                <fullName>mvf</fullName>
            </value>
            <value>
                <fullName>linkedin form</fullName>
            </value>
            <value>
                <fullName>facebook form</fullName>
            </value>
            <value>
                <fullName>gated content form</fullName>
            </value>
            <value>
                <fullName>content download</fullName>
            </value>
            <value>
                <fullName>email nurture</fullName>
            </value>
            <value>
                <fullName>sites webinar registration form</fullName>
            </value>
            <value>
                <fullName>partner-initiated_insurance</fullName>
            </value>
            <value>
                <fullName>uber</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>adwords</fullName>
            </value>
            <value>
                <fullName>InsideUp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>