force-app/main/default/objects/RR_Assignment_Rule__c/fields/Next_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Next_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RR_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>