force-app/main/default/objects/RR_Assignment_Rule__c/fields/Next_Assignment_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Next_Assignment_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Assignment Mapping</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RR_Assignment_Mapping__c.Assignment_Rule__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RR_Assignment_Mapping__c</referenceTo>
    <relationshipLabel>RR Assignment Rules</relationshipLabel>
    <relationshipName>RR_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>