force-app/main/default/objects/RR_Assignment_Rule__c/fields/Number_of_Powered_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Powered_Assets__c</fullName>
    <label>Number of Powered Assets</label>
    <length>25</length>
    <type>Text</type>
</CustomField>