force-app/main/default/objects/RR_Assignment_Rule__c/fields/Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students__c</fullName>
    <label>Number of Students</label>
    <length>25</length>
    <type>Text</type>
</CustomField>