force-app/main/default/objects/RR_Assignment_Rule__c/fields/Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager__c</fullName>
    <description>As part of GTMS-23546</description>
    <label>Owner Manager</label>
    <length>60</length>
    <type>Text</type>
</CustomField>