force-app/main/default/objects/RR_Assignment_Rule__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Added as part of GTMS-18362 (GTMS-19824).

Field used in RoundRobinHandler to compare Account&gt; Owner &gt; Role Name.</description>
    <inlineHelpText>Use brackets to evaluate logic first within the brackets. 
Use &apos;!&apos; -&gt; For &apos;Not&apos; logic. 
Use &apos;&amp;&amp;&apos; -&gt; For &apos;And&apos; logic. 
Use &apos;||&apos; -&gt; For &apos;OR&apos; logic. 
Use &apos;_&apos; -&gt; For space between a single word.</inlineHelpText>
    <label>Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>