force-app/main/default/objects/RR_Assignment_Rule__c/fields/Partner_Persona__c.field-meta.xml
<CustomField>
    <fullName>Partner_Persona__c</fullName>
    <label>Partner Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller/Value Added Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor/Value Added Distributor</fullName>
            </value>
            <value>
                <fullName>Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Insurance Carrier</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>