force-app/main/default/objects/RR_Assignment_Rule__c/fields/Partner_Program_Segment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Segment__c</fullName>
    <label>Partner Program Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agile Fleet (Sales)</fullName>
            </value>
            <value>
                <fullName>Dynamic Fleet (Sales)</fullName>
            </value>
            <value>
                <fullName>Fleet Insight (Insurance)</fullName>
            </value>
            <value>
                <fullName>Fleet Control (Insurance)</fullName>
            </value>
            <value>
                <fullName>Industrial Referral (Sales)</fullName>
            </value>
            <value>
                <fullName>Industrial Reseller (Sales)</fullName>
            </value>
            <value>
                <fullName>Fleet Insurance Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>