force-app/main/default/objects/RR_Assignment_Rule__c/fields/Partner_Team_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Team_Alignment__c</fullName>
    <label>Partner Team Alignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Partner Services</fullName>
            </value>
            <value>
                <fullName>MNO/FMC</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>