force-app/main/default/objects/RR_Assignment_Rule__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>added for GTMS-12532</description>
    <label>Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>