force-app/main/default/objects/RR_Assignment_Rule__c/fields/Record_Type_Stamp_for_Dupes__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Stamp_for_Dupes__c</fullName>
    <description>added for Lane Four conversion POC</description>
    <label>Record Type Stamp for Dupes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Machine Vision</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Connected Worker</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Upfitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>