force-app/main/default/objects/RR_Assignment_Rule__c/fields/SIC_Null_Check__c.field-meta.xml
<CustomField>
    <fullName>SIC_Null_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIC Null Check</label>
    <type>Checkbox</type>
</CustomField>