force-app/main/default/objects/RR_Assignment_Rule__c/fields/SLED__c.field-meta.xml
<CustomField>
    <fullName>SLED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLED</label>
    <type>Checkbox</type>
</CustomField>