force-app/main/default/objects/RR_Assignment_Rule__c/fields/SLED_Check__c.field-meta.xml
<CustomField>
    <fullName>SLED_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLED Check</label>
    <type>Checkbox</type>
</CustomField>