force-app/main/default/objects/RR_Assignment_Rule__c/fields/Use_AND_Condition__c.field-meta.xml
<CustomField>
    <fullName>Use_AND_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use AND Condition</label>
    <type>Checkbox</type>
</CustomField>